tests/ui/parser/issues/issue-62554.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-62554.rs:4:89
   |
LL | fn foo(u: u8) { if u8 macro_rules! u8 { (u6) => { fn uuuuuuuuuuu() { use s loo mod u8 {
   |               -                       -         -                  -                  -^
   |               |                       |         |                  |                  |
   |               |                       |         |                  |                  unclosed delimiter
   |               |                       |         |                  unclosed delimiter
   |               |                       |         unclosed delimiter
   |               unclosed delimiter      unclosed delimiter

error: aborting due to 1 previous error

