tests/ui/parser/issues/issue-62554.rs
// error-pattern:this file contains an unclosed delimiter

fn main() {}

fn foo(u: u8) { if u8 macro_rules! u8 { (u6) => { fn uuuuuuuuuuu() { use s loo mod u8 {
